[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/PlayerCust.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/cust.gd" type="Script" id=3]

[node name="Menu" type="Control"]
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 1 )

[node name="cust" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.0
margin_top = -166.0
margin_right = 243.0
margin_bottom = 166.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="cust"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprites" parent="cust" instance=ExtResource( 2 )]
position = Vector2( 245, 172 )
scale = Vector2( 2, 2 )

[node name="bodyPicker" type="ColorPickerButton" parent="cust"]
margin_left = 177.0
margin_top = 172.0
margin_right = 207.0
margin_bottom = 202.0
rect_min_size = Vector2( 30, 30 )
rect_scale = Vector2( 0.5, 0.5 )

[node name="Create" type="Button" parent="cust"]
margin_left = 215.0
margin_top = 224.0
margin_right = 268.0
margin_bottom = 244.0
text = "Create"

[node name="Buttons" type="GridContainer" parent="."]
visible = false
anchor_left = 0.423438
anchor_top = 0.111111
anchor_right = 0.579687
anchor_bottom = 0.222222
grow_horizontal = 2
custom_constants/vseparation = 16

[node name="Start" type="Button" parent="Buttons"]
margin_right = 101.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 20 )
text = "Start"

[node name="Config" type="Button" parent="Buttons"]
margin_top = 36.0
margin_right = 101.0
margin_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
text = "Configurações"

[node name="configMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -165.0
margin_right = 242.0
margin_bottom = 165.0

[node name="Panel" type="Panel" parent="configMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="configBack" type="Button" parent="configMenu"]
anchor_left = 0.049
anchor_top = 0.945
anchor_right = 0.049
anchor_bottom = 0.946
margin_left = 17.0
margin_top = -32.0
margin_right = 65.0
margin_bottom = -12.0
text = "voltar"

[connection signal="color_changed" from="cust/bodyPicker" to="cust" method="_on_bodyPicker_color_changed"]
[connection signal="pressed" from="cust/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Config" to="." method="_on_Config_pressed"]
[connection signal="pressed" from="configMenu/configBack" to="." method="_on_configBack_pressed"]
